--- a/Index.htm
+++ b/Index.htm
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>this is my first Assignment</h1>
+    <h1>This is my first Assignment</h1>
+    <section>
     <h2>My First Blog</h2>
     <p>The Quick Brown fox jumps Over The lazy Dog. The Quick Brown Fox Jumps Over The lazy Dog. The Quick Brown Fox Jumops Over The Lazyh Dog.
         The Quck Brown Fox Jumps Over The lazy dog.The Quick Brown fox jumps Over The lazy Dog. The Quick Brown Fox Jumps Over The lazy Dog. The Quick Brown Fox Jumops Over The Lazyh Dog.
         The Quck Brown Fox Jumps Over The lazy dog.The Quick Brown fox jumps Over The lazy Dog. The Quick Brown Fox Jumps Over The lazy Dog. The Quick Brown Fox Jumops Over The Lazyh Dog.
         The Quck Brown Fox Jumps Over The lazy dog.
     </p>
+</section>
 </body>
 </html>
