--- a/Index.htm
+++ b/Index.htm
@@ -4,17 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
+   
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is my first Assignment</h1>
+    <h1 id="title">This is my first Assignment</h1>
     <section>
-    <h2>My First Blog</h2>
-    <p>The Quick Brown fox jumps Over The lazy Dog. The Quick Brown Fox Jumps Over The lazy Dog. The Quick Brown Fox Jumops Over The Lazyh Dog.
-        The Quck Brown Fox Jumps Over The lazy dog.The Quick Brown fox jumps Over The lazy Dog. The Quick Brown Fox Jumps Over The lazy Dog. The Quick Brown Fox Jumops Over The Lazyh Dog.
-        The Quck Brown Fox Jumps Over The lazy dog.The Quick Brown fox jumps Over The lazy Dog. The Quick Brown Fox Jumps Over The lazy Dog. The Quick Brown Fox Jumops Over The Lazyh Dog.
-        The Quck Brown Fox Jumps Over The lazy dog.
-    </p>
-</section>
+        <div class="first-blog">
+
+            <h1>Welcome To</h1>
+            <h2>My First Blog</h2>
+            <h3><span>Peter Perker</span> World</h3>
+            <p>The Quick Brown fox jumps Over The lazy Dog. The Quick Brown Fox Jumps Over The lazy Dog. The Quick Brown Fox Jumops Over The Lazyh Dog.
+                The Quck Brown Fox Jumps Over The lazy dog.The Quick Brown fox jumps Over The lazy Dog. The Quick Brown Fox Jumps Over The lazy Dog. The Quick Brown Fox Jumops Over The Lazyh Dog.
+                The Quck Brown Fox Jumps Over The lazy dog.The Quick Brown fox jumps Over The lazy Dog. The Quick Brown Fox Jumps Over The lazy Dog. The Quick Brown Fox Jumops Over The Lazyh Dog.
+                The Quck Brown Fox Jumps Over The lazy dog.
+            </p>
+            <a target="_blank" href="https://github.com/Malamin78600">Hire Me</a>
+            <img id="top-banner" src="images/top-banner.png" alt="">
+           
+        </div>
+        <div class="first-blog">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    
+    </section>
 </body>
 </html>
